# sps-emailer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
docs/: upstream-agent-prompt.md
docs/schema/: email.schema.json
docs/superpowers/plans/: 2026-06-24-schema-amendment-cta-remote.md  2026-06-24-sps-emails-pipeline.md
docs/superpowers/specs/: 2026-06-24-sps-emails-pipeline-design.md
sps/: __main__.py  brevo.py  convert.py  convert_sections.py  deanon.py  purge.py  render.py  schema.py  template.py
tests/: test_brevo.py  test_cli.py  test_convert_header.py  test_convert_run.py  test_convert_sections.py  test_deanon.py  test_purge.py  test_render.py  test_schema.py  test_template.py
tests/fixtures/: fake_names.csv  one_block.md
