[project]
name = "sps-emails"
version = "0.1.0"
description = "Génération et envoi d'e-mails de recommandations IAE (SPS) via Brevo"
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "markdown>=3.6",
    "jsonschema>=4.21",
]

[project.scripts]
sps = "sps.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["sps"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
